
    cdecl> explain int f(int), g(double)
    declare f as function (integer) returning integer
    declare g as function (double precision) returning integer

** Invalid conf file is now fatal
An error in a conf file is now fatal.

** New `--lineno`, `-L` option
Specifies an integer to add to all line numbers in error and warning messages
as a debugging aid.  (See the man page for details.)


* Changes in Cdecl 17.0.1

** Fixed returning parameter packs
Functions returning parameter packs is now correctly illegal.


* Changes in Cdecl 17.0

** Abbreviated function template parameter packs
Functions with `auto` parameters (abbreviated function templates) like:

    int f( auto x )

have been supported since **cdecl** 9.6; this release adds additional support
for parameter packs like:

    int f( auto ...x )

** Added `help` option suggestions
Added suggestions to error messages for the help options `commands`, `english`,
and `options`, for example:

    cdecl> help eglish
                ^
    6: "eglish": no such command or option; did you mean "english"?

** Constrained `auto`
For abbreviated function templates, _constrained_ `auto` declarations are now
supported:

    c++decl> explain C auto x
    declare x as concept C
    c++decl> explain C auto ...x
    declare x as concept C parameter pack

** `auto` parameters in `typedef`s
Use of `auto` in `typedef` function-like parameters is now correctly reported
as an error:

    c++decl> typedef int F(auto)
                           ^
    15: error: "auto" illegal in type definition

** `decltype` declarations
Now recognizing `decltype` just to say it's not supported.

** Glob help
The help text now defines "glob."

** GNU `--version`
Now printing **cdecl** copyright year, author, license, free software
statement, and no warranty statement to conform to the GNU Coding Standards;
see <https://www.gnu.org/prep/standards/html_node/_002d_002dversion.html>.

** Structured binding declarations